Apply code review suggestions.